--- a/documentation/paper.tex
+++ b/documentation/paper.tex
@@ -1483,8 +1483,9 @@ step-by-step, adding linearizations for a few important
 categories and expanding gradually, at least not when basing
 it directly on the abstract specifications from the full RGL.
 
-Of course, it is not feasible either to implement the entire
-resource grammar before being able to do any kind of testing.
+Of course, implementing the entire
+resource grammar before being able to do any kind of testing
+is not a feasible strategy either.
 As a remedy for this problem, Ranta recommends
 taking the resource grammar of a similar language as a
 starting point and changing it step 
@@ -1806,6 +1807,26 @@ Retrieved from \url{http://wiki.dothraki.org/Vocabulary}
 Wikipedia (2016). \emph{Grammatical Framework}.
 Retrieved from \url{https://en.wikipedia.org/wiki/Grammatical_Framework}
 \end{thebibliography}
+
+
+\newpage
+\thispagestyle{empty}
+
+{\LARGE Versicherung}
+
+\vspace{1cm}
+Hiermit versichern wir, diese Arbeit selbst\"andig verfasst und keine anderen als
+die angegebenen Quellen benutzt zu haben. Wir versichern ferner, dass diese
+Arbeit oder Teile davon nicht schon für eine andere Abschlusspr\"ufung oder einen 
+anderen Beteiligungsnachweis eingereicht wurden. Uns ist bewusst, dass ein 
+Zuwiderhandeln gegen diese Versicherung eine Ordnungswidrigkeit darstellt, die 
+mit einer Geldbu\ss e geahndet werden kann.
+
+\vspace{1cm}
+D\"usseldorf, den 16.10.2016
+
+
+
 
 
 
