--- a/documentation/paper.tex
+++ b/documentation/paper.tex
@@ -1445,7 +1445,7 @@ It demonstrates the following
 features supported by our resource grammar:
 \begin{itemize}[itemsep=0pt]
   \item Transitive and intransitive verbs
-  \item Tenses: Past perfect, present, future, present perfect, past perfect
+  \item Tenses: Past, present, future, present perfect, past perfect
   \item Negation
   \item Passive voice
   \item Verbal auxiliaries
